Bug 86502 - EDITING: Some cells is not recalculated when deleting precedence cell
Summary: EDITING: Some cells is not recalculated when deleting precedence cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.6.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-11-20 23:11 UTC by Andrey
Modified: 2016-10-25 19:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2014-11-20 23:11:02 UTC
Steps to reproduce:

1. Create a spreadsheet:
      A    B
  1   1   =A1
  2   2   =A2

2. Delete cell A1 (rightclick/Delete/Shift cells up)
  result:
      A    B
  1   2   =A#REF!
  2       =A1

  -OK-

3. Undo - We see original data from step 1 - OK

4. Delete cell A2 (rightclick/Delete/Shift cells up)
  result:
      A    B
  1   1   =A1
  2       =A2

  -Wrong!-

5. Undo - result:
      A    B
  1   1   =A1
  2   2   =A3

 And B2 shows old value "2"
  -Wrong!-

We can see the same issue when deleting the whole raw

Working in Version: 4.2.7.2 Build ID: 4.2.7.2-7.fc20 and some 4.2.6 (before updating)
Comment 1 Björn Michaelsen 2014-11-21 10:04:04 UTC
I can reproduce steps 1-5 in 4.2.6.3, at least not a regression in 4.2.7. FWIW, Im not entirely convinced that step 4 is a bug. => updating version

But step 5 clearly is, if alone because it should be back at step 1/step 3 after undo. Also still reproducable on master at 2851ce5afd0f37764cbbc2c2a9a63c7adc844311 (2014-11-20). => confirming, moving to NEW
Comment 2 Andrey 2014-11-21 12:37:18 UTC
In Version: 4.1.3.2 Build ID: 4.1.3.2-9.fc20

Result of step 4 looks as:
      A    B
  1   1   =A1
  2       =A#REF!

I thing it's right result.
And undoing (step 5) returns original data (in 4.1.3.2)
Comment 3 QA Administrators 2015-12-20 16:11:45 UTC Comment hidden (obsolete)
Comment 4 Commit Notification 2016-05-18 22:30:41 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a2e591e26549294cdb07eb685d4069343404d898

Resolves: tdf#86502 split formula groups referring bounds shifted into

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Eike Rathke (retired, only occasionally showing up) 2016-05-18 22:41:03 UTC
Pending review https://gerrit.libreoffice.org/25118 for 5-1
Comment 6 Commit Notification 2016-05-19 14:49:06 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2dd04ab835656ebeabc341489650b9b97fa5dd8d&h=libreoffice-5-1

Resolves: tdf#86502 split formula groups referring bounds shifted into

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.