Resolves: tdf#86502 split formula groups referring bounds shifted into

So references can be updated or invalidated individually when deleting
cells with shifting cells up or left.

Change-Id: I03a57e94cf0fa9bb0716ffec21960e85ad5c7094